@@ -4,5 +4,6 @@ void
 DESTROY(self)
     ffi_pl_closure *self
   CODE:
+    SvREFCNT_dec(self->coderef);
     ffi_closure_free(self->ffi_closure);
     Safefree(self);
